parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> fun_list
Rule 2     fun_list -> function fun_list
Rule 3     fun_list -> function
Rule 4     function -> type VARIABLE SQ_OPEN_BR par_list SQ_CLOSING_BR BEGIN stmt_list END DOT
Rule 5     function -> type VARIABLE SQ_OPEN_BR SQ_CLOSING_BR BEGIN stmt_list END DOT
Rule 6     par_list -> parameter COMMA par_list
Rule 7     par_list -> parameter
Rule 8     parameter -> type VARIABLE
Rule 9     parameter -> FIELD type type VARIABLE
Rule 10    stmt_list -> statement COMMA stmt_list
Rule 11    stmt_list -> statement DOT
Rule 12    statement -> declaration
Rule 13    statement -> assignment
Rule 14    statement -> arithm_operation
Rule 15    statement -> until
Rule 16    statement -> check
Rule 17    statement -> function_call
Rule 18    statement -> robot_operation
Rule 19    statement -> return
Rule 20    declaration -> type variable_list R_ASSIGNMENT literal
Rule 21    declaration -> FIELD type type variable_list R_ASSIGNMENT literal
Rule 22    type -> TINY
Rule 23    type -> SMALL
Rule 24    type -> NORMAL
Rule 25    type -> BIG
Rule 26    variable_list -> VARIABLE variable_list
Rule 27    variable_list -> VARIABLE
Rule 28    literal -> U_NUMBER
Rule 29    literal -> S_NUMBER
Rule 30    assignment -> arithm_operation R_ASSIGNMENT arithm_operation
Rule 31    assignment -> arithm_operation R_ASSIGNMENT assignment
Rule 32    assignment -> arithm_operation L_ASSIGNMENT arithm_operation
Rule 33    assignment -> arithm_operation L_ASSIGNMENT assignment
Rule 34    arithm_operation -> OPEN_BR arithm_operation CLOSING_BR
Rule 35    arithm_operation -> ADD arithm_operation
Rule 36    arithm_operation -> SUB arithm_operation
Rule 37    arithm_operation -> arithm_operation MUL arithm_operation
Rule 38    arithm_operation -> arithm_operation DIV arithm_operation
Rule 39    arithm_operation -> arithm_operation ADD arithm_operation
Rule 40    arithm_operation -> arithm_operation SUB arithm_operation
Rule 41    arithm_operation -> varlit
Rule 42    arithm_operation -> function_call
Rule 43    arithm_operation -> robot_operation
Rule 44    varlit -> VARIABLE
Rule 45    varlit -> literal
Rule 46    varlit -> matr_elem
Rule 47    matr_elem -> VARIABLE SQ_OPEN_BR literal literal SQ_CLOSING_BR
Rule 48    comparison -> arithm_operation N_EQ arithm_operation
Rule 49    comparison -> arithm_operation L_EQ arithm_operation
Rule 50    comparison -> arithm_operation GR_EQ arithm_operation
Rule 51    until -> UNTIL comparison DO stmt_list
Rule 52    check -> CHECK comparison DO stmt_list
Rule 53    function_call -> VARIABLE OPEN_BR CLOSING_BR
Rule 54    function_call -> VARIABLE OPEN_BR variable_list CLOSING_BR
Rule 55    robot_operation -> GO
Rule 56    robot_operation -> RL
Rule 57    robot_operation -> RR
Rule 58    robot_operation -> SONAR
Rule 59    robot_operation -> COMPASS
Rule 60    return -> RETURN arithm_operation

Terminals, with rules where they appear

ADD                  : 35 39
BEGIN                : 4 5
BIG                  : 25
CHECK                : 52
CLOSING_BR           : 34 53 54
COMMA                : 6 10
COMPASS              : 59
DIV                  : 38
DO                   : 51 52
DOT                  : 4 5 11
END                  : 4 5
FIELD                : 9 21
GO                   : 55
GR_EQ                : 50
L_ASSIGNMENT         : 32 33
L_EQ                 : 49
MUL                  : 37
NORMAL               : 24
N_EQ                 : 48
OPEN_BR              : 34 53 54
RETURN               : 60
RL                   : 56
RR                   : 57
R_ASSIGNMENT         : 20 21 30 31
SMALL                : 23
SONAR                : 58
SQ_CLOSING_BR        : 4 5 47
SQ_OPEN_BR           : 4 5 47
SUB                  : 36 40
S_NUMBER             : 29
TINY                 : 22
UNTIL                : 51
U_NUMBER             : 28
VARIABLE             : 4 5 8 9 26 27 44 47 53 54
error                : 

Nonterminals, with rules where they appear

arithm_operation     : 14 30 30 31 32 32 33 34 35 36 37 37 38 38 39 39 40 40 48 48 49 49 50 50 60
assignment           : 13 31 33
check                : 16
comparison           : 51 52
declaration          : 12
fun_list             : 1 2
function             : 2 3
function_call        : 17 42
literal              : 20 21 45 47 47
matr_elem            : 46
par_list             : 4 6
parameter            : 6 7
program              : 0
return               : 19
robot_operation      : 18 43
statement            : 10 11
stmt_list            : 4 5 10 51 52
type                 : 4 5 8 9 9 20 21 21
until                : 15
variable_list        : 20 21 26 54
varlit               : 41

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . fun_list
    (2) fun_list -> . function fun_list
    (3) fun_list -> . function
    (4) function -> . type VARIABLE SQ_OPEN_BR par_list SQ_CLOSING_BR BEGIN stmt_list END DOT
    (5) function -> . type VARIABLE SQ_OPEN_BR SQ_CLOSING_BR BEGIN stmt_list END DOT
    (22) type -> . TINY
    (23) type -> . SMALL
    (24) type -> . NORMAL
    (25) type -> . BIG

    TINY            shift and go to state 5
    SMALL           shift and go to state 6
    NORMAL          shift and go to state 7
    BIG             shift and go to state 8

    program                        shift and go to state 1
    fun_list                       shift and go to state 2
    function                       shift and go to state 3
    type                           shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> fun_list .

    $end            reduce using rule 1 (program -> fun_list .)


state 3

    (2) fun_list -> function . fun_list
    (3) fun_list -> function .
    (2) fun_list -> . function fun_list
    (3) fun_list -> . function
    (4) function -> . type VARIABLE SQ_OPEN_BR par_list SQ_CLOSING_BR BEGIN stmt_list END DOT
    (5) function -> . type VARIABLE SQ_OPEN_BR SQ_CLOSING_BR BEGIN stmt_list END DOT
    (22) type -> . TINY
    (23) type -> . SMALL
    (24) type -> . NORMAL
    (25) type -> . BIG

    $end            reduce using rule 3 (fun_list -> function .)
    TINY            shift and go to state 5
    SMALL           shift and go to state 6
    NORMAL          shift and go to state 7
    BIG             shift and go to state 8

    function                       shift and go to state 3
    fun_list                       shift and go to state 9
    type                           shift and go to state 4

state 4

    (4) function -> type . VARIABLE SQ_OPEN_BR par_list SQ_CLOSING_BR BEGIN stmt_list END DOT
    (5) function -> type . VARIABLE SQ_OPEN_BR SQ_CLOSING_BR BEGIN stmt_list END DOT

    VARIABLE        shift and go to state 10


state 5

    (22) type -> TINY .

    VARIABLE        reduce using rule 22 (type -> TINY .)
    TINY            reduce using rule 22 (type -> TINY .)
    SMALL           reduce using rule 22 (type -> TINY .)
    NORMAL          reduce using rule 22 (type -> TINY .)
    BIG             reduce using rule 22 (type -> TINY .)


state 6

    (23) type -> SMALL .

    VARIABLE        reduce using rule 23 (type -> SMALL .)
    TINY            reduce using rule 23 (type -> SMALL .)
    SMALL           reduce using rule 23 (type -> SMALL .)
    NORMAL          reduce using rule 23 (type -> SMALL .)
    BIG             reduce using rule 23 (type -> SMALL .)


state 7

    (24) type -> NORMAL .

    VARIABLE        reduce using rule 24 (type -> NORMAL .)
    TINY            reduce using rule 24 (type -> NORMAL .)
    SMALL           reduce using rule 24 (type -> NORMAL .)
    NORMAL          reduce using rule 24 (type -> NORMAL .)
    BIG             reduce using rule 24 (type -> NORMAL .)


state 8

    (25) type -> BIG .

    VARIABLE        reduce using rule 25 (type -> BIG .)
    TINY            reduce using rule 25 (type -> BIG .)
    SMALL           reduce using rule 25 (type -> BIG .)
    NORMAL          reduce using rule 25 (type -> BIG .)
    BIG             reduce using rule 25 (type -> BIG .)


state 9

    (2) fun_list -> function fun_list .

    $end            reduce using rule 2 (fun_list -> function fun_list .)


state 10

    (4) function -> type VARIABLE . SQ_OPEN_BR par_list SQ_CLOSING_BR BEGIN stmt_list END DOT
    (5) function -> type VARIABLE . SQ_OPEN_BR SQ_CLOSING_BR BEGIN stmt_list END DOT

    SQ_OPEN_BR      shift and go to state 11


state 11

    (4) function -> type VARIABLE SQ_OPEN_BR . par_list SQ_CLOSING_BR BEGIN stmt_list END DOT
    (5) function -> type VARIABLE SQ_OPEN_BR . SQ_CLOSING_BR BEGIN stmt_list END DOT
    (6) par_list -> . parameter COMMA par_list
    (7) par_list -> . parameter
    (8) parameter -> . type VARIABLE
    (9) parameter -> . FIELD type type VARIABLE
    (22) type -> . TINY
    (23) type -> . SMALL
    (24) type -> . NORMAL
    (25) type -> . BIG

    SQ_CLOSING_BR   shift and go to state 14
    FIELD           shift and go to state 16
    TINY            shift and go to state 5
    SMALL           shift and go to state 6
    NORMAL          shift and go to state 7
    BIG             shift and go to state 8

    type                           shift and go to state 12
    par_list                       shift and go to state 13
    parameter                      shift and go to state 15

state 12

    (8) parameter -> type . VARIABLE

    VARIABLE        shift and go to state 17


state 13

    (4) function -> type VARIABLE SQ_OPEN_BR par_list . SQ_CLOSING_BR BEGIN stmt_list END DOT

    SQ_CLOSING_BR   shift and go to state 18


state 14

    (5) function -> type VARIABLE SQ_OPEN_BR SQ_CLOSING_BR . BEGIN stmt_list END DOT

    BEGIN           shift and go to state 19


state 15

    (6) par_list -> parameter . COMMA par_list
    (7) par_list -> parameter .

    COMMA           shift and go to state 20
    SQ_CLOSING_BR   reduce using rule 7 (par_list -> parameter .)


state 16

    (9) parameter -> FIELD . type type VARIABLE
    (22) type -> . TINY
    (23) type -> . SMALL
    (24) type -> . NORMAL
    (25) type -> . BIG

    TINY            shift and go to state 5
    SMALL           shift and go to state 6
    NORMAL          shift and go to state 7
    BIG             shift and go to state 8

    type                           shift and go to state 21

state 17

    (8) parameter -> type VARIABLE .

    COMMA           reduce using rule 8 (parameter -> type VARIABLE .)
    SQ_CLOSING_BR   reduce using rule 8 (parameter -> type VARIABLE .)


state 18

    (4) function -> type VARIABLE SQ_OPEN_BR par_list SQ_CLOSING_BR . BEGIN stmt_list END DOT

    BEGIN           shift and go to state 22


state 19

    (5) function -> type VARIABLE SQ_OPEN_BR SQ_CLOSING_BR BEGIN . stmt_list END DOT
    (10) stmt_list -> . statement COMMA stmt_list
    (11) stmt_list -> . statement DOT
    (12) statement -> . declaration
    (13) statement -> . assignment
    (14) statement -> . arithm_operation
    (15) statement -> . until
    (16) statement -> . check
    (17) statement -> . function_call
    (18) statement -> . robot_operation
    (19) statement -> . return
    (20) declaration -> . type variable_list R_ASSIGNMENT literal
    (21) declaration -> . FIELD type type variable_list R_ASSIGNMENT literal
    (30) assignment -> . arithm_operation R_ASSIGNMENT arithm_operation
    (31) assignment -> . arithm_operation R_ASSIGNMENT assignment
    (32) assignment -> . arithm_operation L_ASSIGNMENT arithm_operation
    (33) assignment -> . arithm_operation L_ASSIGNMENT assignment
    (34) arithm_operation -> . OPEN_BR arithm_operation CLOSING_BR
    (35) arithm_operation -> . ADD arithm_operation
    (36) arithm_operation -> . SUB arithm_operation
    (37) arithm_operation -> . arithm_operation MUL arithm_operation
    (38) arithm_operation -> . arithm_operation DIV arithm_operation
    (39) arithm_operation -> . arithm_operation ADD arithm_operation
    (40) arithm_operation -> . arithm_operation SUB arithm_operation
    (41) arithm_operation -> . varlit
    (42) arithm_operation -> . function_call
    (43) arithm_operation -> . robot_operation
    (51) until -> . UNTIL comparison DO stmt_list
    (52) check -> . CHECK comparison DO stmt_list
    (53) function_call -> . VARIABLE OPEN_BR CLOSING_BR
    (54) function_call -> . VARIABLE OPEN_BR variable_list CLOSING_BR
    (55) robot_operation -> . GO
    (56) robot_operation -> . RL
    (57) robot_operation -> . RR
    (58) robot_operation -> . SONAR
    (59) robot_operation -> . COMPASS
    (60) return -> . RETURN arithm_operation
    (22) type -> . TINY
    (23) type -> . SMALL
    (24) type -> . NORMAL
    (25) type -> . BIG
    (44) varlit -> . VARIABLE
    (45) varlit -> . literal
    (46) varlit -> . matr_elem
    (28) literal -> . U_NUMBER
    (29) literal -> . S_NUMBER
    (47) matr_elem -> . VARIABLE SQ_OPEN_BR literal literal SQ_CLOSING_BR

    FIELD           shift and go to state 36
    OPEN_BR         shift and go to state 37
    ADD             shift and go to state 38
    SUB             shift and go to state 39
    UNTIL           shift and go to state 41
    CHECK           shift and go to state 42
    VARIABLE        shift and go to state 24
    GO              shift and go to state 43
    RL              shift and go to state 44
    RR              shift and go to state 45
    SONAR           shift and go to state 46
    COMPASS         shift and go to state 47
    RETURN          shift and go to state 48
    TINY            shift and go to state 5
    SMALL           shift and go to state 6
    NORMAL          shift and go to state 7
    BIG             shift and go to state 8
    U_NUMBER        shift and go to state 50
    S_NUMBER        shift and go to state 51

    type                           shift and go to state 23
    stmt_list                      shift and go to state 25
    statement                      shift and go to state 26
    declaration                    shift and go to state 27
    assignment                     shift and go to state 28
    arithm_operation               shift and go to state 29
    until                          shift and go to state 30
    check                          shift and go to state 31
    function_call                  shift and go to state 32
    robot_operation                shift and go to state 33
    return                         shift and go to state 34
    literal                        shift and go to state 35
    varlit                         shift and go to state 40
    matr_elem                      shift and go to state 49

state 20

    (6) par_list -> parameter COMMA . par_list
    (6) par_list -> . parameter COMMA par_list
    (7) par_list -> . parameter
    (8) parameter -> . type VARIABLE
    (9) parameter -> . FIELD type type VARIABLE
    (22) type -> . TINY
    (23) type -> . SMALL
    (24) type -> . NORMAL
    (25) type -> . BIG

    FIELD           shift and go to state 16
    TINY            shift and go to state 5
    SMALL           shift and go to state 6
    NORMAL          shift and go to state 7
    BIG             shift and go to state 8

    parameter                      shift and go to state 15
    par_list                       shift and go to state 52
    type                           shift and go to state 12

state 21

    (9) parameter -> FIELD type . type VARIABLE
    (22) type -> . TINY
    (23) type -> . SMALL
    (24) type -> . NORMAL
    (25) type -> . BIG

    TINY            shift and go to state 5
    SMALL           shift and go to state 6
    NORMAL          shift and go to state 7
    BIG             shift and go to state 8

    type                           shift and go to state 53

state 22

    (4) function -> type VARIABLE SQ_OPEN_BR par_list SQ_CLOSING_BR BEGIN . stmt_list END DOT
    (10) stmt_list -> . statement COMMA stmt_list
    (11) stmt_list -> . statement DOT
    (12) statement -> . declaration
    (13) statement -> . assignment
    (14) statement -> . arithm_operation
    (15) statement -> . until
    (16) statement -> . check
    (17) statement -> . function_call
    (18) statement -> . robot_operation
    (19) statement -> . return
    (20) declaration -> . type variable_list R_ASSIGNMENT literal
    (21) declaration -> . FIELD type type variable_list R_ASSIGNMENT literal
    (30) assignment -> . arithm_operation R_ASSIGNMENT arithm_operation
    (31) assignment -> . arithm_operation R_ASSIGNMENT assignment
    (32) assignment -> . arithm_operation L_ASSIGNMENT arithm_operation
    (33) assignment -> . arithm_operation L_ASSIGNMENT assignment
    (34) arithm_operation -> . OPEN_BR arithm_operation CLOSING_BR
    (35) arithm_operation -> . ADD arithm_operation
    (36) arithm_operation -> . SUB arithm_operation
    (37) arithm_operation -> . arithm_operation MUL arithm_operation
    (38) arithm_operation -> . arithm_operation DIV arithm_operation
    (39) arithm_operation -> . arithm_operation ADD arithm_operation
    (40) arithm_operation -> . arithm_operation SUB arithm_operation
    (41) arithm_operation -> . varlit
    (42) arithm_operation -> . function_call
    (43) arithm_operation -> . robot_operation
    (51) until -> . UNTIL comparison DO stmt_list
    (52) check -> . CHECK comparison DO stmt_list
    (53) function_call -> . VARIABLE OPEN_BR CLOSING_BR
    (54) function_call -> . VARIABLE OPEN_BR variable_list CLOSING_BR
    (55) robot_operation -> . GO
    (56) robot_operation -> . RL
    (57) robot_operation -> . RR
    (58) robot_operation -> . SONAR
    (59) robot_operation -> . COMPASS
    (60) return -> . RETURN arithm_operation
    (22) type -> . TINY
    (23) type -> . SMALL
    (24) type -> . NORMAL
    (25) type -> . BIG
    (44) varlit -> . VARIABLE
    (45) varlit -> . literal
    (46) varlit -> . matr_elem
    (28) literal -> . U_NUMBER
    (29) literal -> . S_NUMBER
    (47) matr_elem -> . VARIABLE SQ_OPEN_BR literal literal SQ_CLOSING_BR

    FIELD           shift and go to state 36
    OPEN_BR         shift and go to state 37
    ADD             shift and go to state 38
    SUB             shift and go to state 39
    UNTIL           shift and go to state 41
    CHECK           shift and go to state 42
    VARIABLE        shift and go to state 24
    GO              shift and go to state 43
    RL              shift and go to state 44
    RR              shift and go to state 45
    SONAR           shift and go to state 46
    COMPASS         shift and go to state 47
    RETURN          shift and go to state 48
    TINY            shift and go to state 5
    SMALL           shift and go to state 6
    NORMAL          shift and go to state 7
    BIG             shift and go to state 8
    U_NUMBER        shift and go to state 50
    S_NUMBER        shift and go to state 51

    type                           shift and go to state 23
    stmt_list                      shift and go to state 54
    statement                      shift and go to state 26
    declaration                    shift and go to state 27
    assignment                     shift and go to state 28
    arithm_operation               shift and go to state 29
    until                          shift and go to state 30
    check                          shift and go to state 31
    function_call                  shift and go to state 32
    robot_operation                shift and go to state 33
    return                         shift and go to state 34
    literal                        shift and go to state 35
    varlit                         shift and go to state 40
    matr_elem                      shift and go to state 49

state 23

    (20) declaration -> type . variable_list R_ASSIGNMENT literal
    (26) variable_list -> . VARIABLE variable_list
    (27) variable_list -> . VARIABLE

    VARIABLE        shift and go to state 56

    variable_list                  shift and go to state 55

state 24

    (53) function_call -> VARIABLE . OPEN_BR CLOSING_BR
    (54) function_call -> VARIABLE . OPEN_BR variable_list CLOSING_BR
    (44) varlit -> VARIABLE .
    (47) matr_elem -> VARIABLE . SQ_OPEN_BR literal literal SQ_CLOSING_BR

    OPEN_BR         shift and go to state 57
    R_ASSIGNMENT    reduce using rule 44 (varlit -> VARIABLE .)
    L_ASSIGNMENT    reduce using rule 44 (varlit -> VARIABLE .)
    MUL             reduce using rule 44 (varlit -> VARIABLE .)
    DIV             reduce using rule 44 (varlit -> VARIABLE .)
    ADD             reduce using rule 44 (varlit -> VARIABLE .)
    SUB             reduce using rule 44 (varlit -> VARIABLE .)
    COMMA           reduce using rule 44 (varlit -> VARIABLE .)
    DOT             reduce using rule 44 (varlit -> VARIABLE .)
    SQ_OPEN_BR      shift and go to state 58


state 25

    (5) function -> type VARIABLE SQ_OPEN_BR SQ_CLOSING_BR BEGIN stmt_list . END DOT

    END             shift and go to state 59


state 26

    (10) stmt_list -> statement . COMMA stmt_list
    (11) stmt_list -> statement . DOT

    COMMA           shift and go to state 60
    DOT             shift and go to state 61


state 27

    (12) statement -> declaration .

    COMMA           reduce using rule 12 (statement -> declaration .)
    DOT             reduce using rule 12 (statement -> declaration .)


state 28

    (13) statement -> assignment .

    COMMA           reduce using rule 13 (statement -> assignment .)
    DOT             reduce using rule 13 (statement -> assignment .)


state 29

    (14) statement -> arithm_operation .
    (30) assignment -> arithm_operation . R_ASSIGNMENT arithm_operation
    (31) assignment -> arithm_operation . R_ASSIGNMENT assignment
    (32) assignment -> arithm_operation . L_ASSIGNMENT arithm_operation
    (33) assignment -> arithm_operation . L_ASSIGNMENT assignment
    (37) arithm_operation -> arithm_operation . MUL arithm_operation
    (38) arithm_operation -> arithm_operation . DIV arithm_operation
    (39) arithm_operation -> arithm_operation . ADD arithm_operation
    (40) arithm_operation -> arithm_operation . SUB arithm_operation

    COMMA           reduce using rule 14 (statement -> arithm_operation .)
    DOT             reduce using rule 14 (statement -> arithm_operation .)
    R_ASSIGNMENT    shift and go to state 62
    L_ASSIGNMENT    shift and go to state 63
    MUL             shift and go to state 64
    DIV             shift and go to state 65
    ADD             shift and go to state 66
    SUB             shift and go to state 67


state 30

    (15) statement -> until .

    COMMA           reduce using rule 15 (statement -> until .)
    DOT             reduce using rule 15 (statement -> until .)


state 31

    (16) statement -> check .

    COMMA           reduce using rule 16 (statement -> check .)
    DOT             reduce using rule 16 (statement -> check .)


state 32

    (17) statement -> function_call .
    (42) arithm_operation -> function_call .

  ! reduce/reduce conflict for COMMA resolved using rule 17 (statement -> function_call .)
  ! reduce/reduce conflict for DOT resolved using rule 17 (statement -> function_call .)
    COMMA           reduce using rule 17 (statement -> function_call .)
    DOT             reduce using rule 17 (statement -> function_call .)
    R_ASSIGNMENT    reduce using rule 42 (arithm_operation -> function_call .)
    L_ASSIGNMENT    reduce using rule 42 (arithm_operation -> function_call .)
    MUL             reduce using rule 42 (arithm_operation -> function_call .)
    DIV             reduce using rule 42 (arithm_operation -> function_call .)
    ADD             reduce using rule 42 (arithm_operation -> function_call .)
    SUB             reduce using rule 42 (arithm_operation -> function_call .)

  ! COMMA           [ reduce using rule 42 (arithm_operation -> function_call .) ]
  ! DOT             [ reduce using rule 42 (arithm_operation -> function_call .) ]


state 33

    (18) statement -> robot_operation .
    (43) arithm_operation -> robot_operation .

  ! reduce/reduce conflict for COMMA resolved using rule 18 (statement -> robot_operation .)
  ! reduce/reduce conflict for DOT resolved using rule 18 (statement -> robot_operation .)
    COMMA           reduce using rule 18 (statement -> robot_operation .)
    DOT             reduce using rule 18 (statement -> robot_operation .)
    R_ASSIGNMENT    reduce using rule 43 (arithm_operation -> robot_operation .)
    L_ASSIGNMENT    reduce using rule 43 (arithm_operation -> robot_operation .)
    MUL             reduce using rule 43 (arithm_operation -> robot_operation .)
    DIV             reduce using rule 43 (arithm_operation -> robot_operation .)
    ADD             reduce using rule 43 (arithm_operation -> robot_operation .)
    SUB             reduce using rule 43 (arithm_operation -> robot_operation .)

  ! COMMA           [ reduce using rule 43 (arithm_operation -> robot_operation .) ]
  ! DOT             [ reduce using rule 43 (arithm_operation -> robot_operation .) ]


state 34

    (19) statement -> return .

    COMMA           reduce using rule 19 (statement -> return .)
    DOT             reduce using rule 19 (statement -> return .)


state 35

    (45) varlit -> literal .

    R_ASSIGNMENT    reduce using rule 45 (varlit -> literal .)
    L_ASSIGNMENT    reduce using rule 45 (varlit -> literal .)
    MUL             reduce using rule 45 (varlit -> literal .)
    DIV             reduce using rule 45 (varlit -> literal .)
    ADD             reduce using rule 45 (varlit -> literal .)
    SUB             reduce using rule 45 (varlit -> literal .)
    COMMA           reduce using rule 45 (varlit -> literal .)
    DOT             reduce using rule 45 (varlit -> literal .)
    CLOSING_BR      reduce using rule 45 (varlit -> literal .)
    N_EQ            reduce using rule 45 (varlit -> literal .)
    L_EQ            reduce using rule 45 (varlit -> literal .)
    GR_EQ           reduce using rule 45 (varlit -> literal .)
    DO              reduce using rule 45 (varlit -> literal .)


state 36

    (21) declaration -> FIELD . type type variable_list R_ASSIGNMENT literal
    (22) type -> . TINY
    (23) type -> . SMALL
    (24) type -> . NORMAL
    (25) type -> . BIG

    TINY            shift and go to state 5
    SMALL           shift and go to state 6
    NORMAL          shift and go to state 7
    BIG             shift and go to state 8

    type                           shift and go to state 68

state 37

    (34) arithm_operation -> OPEN_BR . arithm_operation CLOSING_BR
    (34) arithm_operation -> . OPEN_BR arithm_operation CLOSING_BR
    (35) arithm_operation -> . ADD arithm_operation
    (36) arithm_operation -> . SUB arithm_operation
    (37) arithm_operation -> . arithm_operation MUL arithm_operation
    (38) arithm_operation -> . arithm_operation DIV arithm_operation
    (39) arithm_operation -> . arithm_operation ADD arithm_operation
    (40) arithm_operation -> . arithm_operation SUB arithm_operation
    (41) arithm_operation -> . varlit
    (42) arithm_operation -> . function_call
    (43) arithm_operation -> . robot_operation
    (44) varlit -> . VARIABLE
    (45) varlit -> . literal
    (46) varlit -> . matr_elem
    (53) function_call -> . VARIABLE OPEN_BR CLOSING_BR
    (54) function_call -> . VARIABLE OPEN_BR variable_list CLOSING_BR
    (55) robot_operation -> . GO
    (56) robot_operation -> . RL
    (57) robot_operation -> . RR
    (58) robot_operation -> . SONAR
    (59) robot_operation -> . COMPASS
    (28) literal -> . U_NUMBER
    (29) literal -> . S_NUMBER
    (47) matr_elem -> . VARIABLE SQ_OPEN_BR literal literal SQ_CLOSING_BR

    OPEN_BR         shift and go to state 37
    ADD             shift and go to state 38
    SUB             shift and go to state 39
    VARIABLE        shift and go to state 72
    GO              shift and go to state 43
    RL              shift and go to state 44
    RR              shift and go to state 45
    SONAR           shift and go to state 46
    COMPASS         shift and go to state 47
    U_NUMBER        shift and go to state 50
    S_NUMBER        shift and go to state 51

    arithm_operation               shift and go to state 69
    varlit                         shift and go to state 40
    function_call                  shift and go to state 70
    robot_operation                shift and go to state 71
    literal                        shift and go to state 35
    matr_elem                      shift and go to state 49

state 38

    (35) arithm_operation -> ADD . arithm_operation
    (34) arithm_operation -> . OPEN_BR arithm_operation CLOSING_BR
    (35) arithm_operation -> . ADD arithm_operation
    (36) arithm_operation -> . SUB arithm_operation
    (37) arithm_operation -> . arithm_operation MUL arithm_operation
    (38) arithm_operation -> . arithm_operation DIV arithm_operation
    (39) arithm_operation -> . arithm_operation ADD arithm_operation
    (40) arithm_operation -> . arithm_operation SUB arithm_operation
    (41) arithm_operation -> . varlit
    (42) arithm_operation -> . function_call
    (43) arithm_operation -> . robot_operation
    (44) varlit -> . VARIABLE
    (45) varlit -> . literal
    (46) varlit -> . matr_elem
    (53) function_call -> . VARIABLE OPEN_BR CLOSING_BR
    (54) function_call -> . VARIABLE OPEN_BR variable_list CLOSING_BR
    (55) robot_operation -> . GO
    (56) robot_operation -> . RL
    (57) robot_operation -> . RR
    (58) robot_operation -> . SONAR
    (59) robot_operation -> . COMPASS
    (28) literal -> . U_NUMBER
    (29) literal -> . S_NUMBER
    (47) matr_elem -> . VARIABLE SQ_OPEN_BR literal literal SQ_CLOSING_BR

    OPEN_BR         shift and go to state 37
    ADD             shift and go to state 38
    SUB             shift and go to state 39
    VARIABLE        shift and go to state 72
    GO              shift and go to state 43
    RL              shift and go to state 44
    RR              shift and go to state 45
    SONAR           shift and go to state 46
    COMPASS         shift and go to state 47
    U_NUMBER        shift and go to state 50
    S_NUMBER        shift and go to state 51

    arithm_operation               shift and go to state 73
    varlit                         shift and go to state 40
    function_call                  shift and go to state 70
    robot_operation                shift and go to state 71
    literal                        shift and go to state 35
    matr_elem                      shift and go to state 49

state 39

    (36) arithm_operation -> SUB . arithm_operation
    (34) arithm_operation -> . OPEN_BR arithm_operation CLOSING_BR
    (35) arithm_operation -> . ADD arithm_operation
    (36) arithm_operation -> . SUB arithm_operation
    (37) arithm_operation -> . arithm_operation MUL arithm_operation
    (38) arithm_operation -> . arithm_operation DIV arithm_operation
    (39) arithm_operation -> . arithm_operation ADD arithm_operation
    (40) arithm_operation -> . arithm_operation SUB arithm_operation
    (41) arithm_operation -> . varlit
    (42) arithm_operation -> . function_call
    (43) arithm_operation -> . robot_operation
    (44) varlit -> . VARIABLE
    (45) varlit -> . literal
    (46) varlit -> . matr_elem
    (53) function_call -> . VARIABLE OPEN_BR CLOSING_BR
    (54) function_call -> . VARIABLE OPEN_BR variable_list CLOSING_BR
    (55) robot_operation -> . GO
    (56) robot_operation -> . RL
    (57) robot_operation -> . RR
    (58) robot_operation -> . SONAR
    (59) robot_operation -> . COMPASS
    (28) literal -> . U_NUMBER
    (29) literal -> . S_NUMBER
    (47) matr_elem -> . VARIABLE SQ_OPEN_BR literal literal SQ_CLOSING_BR

    OPEN_BR         shift and go to state 37
    ADD             shift and go to state 38
    SUB             shift and go to state 39
    VARIABLE        shift and go to state 72
    GO              shift and go to state 43
    RL              shift and go to state 44
    RR              shift and go to state 45
    SONAR           shift and go to state 46
    COMPASS         shift and go to state 47
    U_NUMBER        shift and go to state 50
    S_NUMBER        shift and go to state 51

    arithm_operation               shift and go to state 74
    varlit                         shift and go to state 40
    function_call                  shift and go to state 70
    robot_operation                shift and go to state 71
    literal                        shift and go to state 35
    matr_elem                      shift and go to state 49

state 40

    (41) arithm_operation -> varlit .

    R_ASSIGNMENT    reduce using rule 41 (arithm_operation -> varlit .)
    L_ASSIGNMENT    reduce using rule 41 (arithm_operation -> varlit .)
    MUL             reduce using rule 41 (arithm_operation -> varlit .)
    DIV             reduce using rule 41 (arithm_operation -> varlit .)
    ADD             reduce using rule 41 (arithm_operation -> varlit .)
    SUB             reduce using rule 41 (arithm_operation -> varlit .)
    COMMA           reduce using rule 41 (arithm_operation -> varlit .)
    DOT             reduce using rule 41 (arithm_operation -> varlit .)
    CLOSING_BR      reduce using rule 41 (arithm_operation -> varlit .)
    N_EQ            reduce using rule 41 (arithm_operation -> varlit .)
    L_EQ            reduce using rule 41 (arithm_operation -> varlit .)
    GR_EQ           reduce using rule 41 (arithm_operation -> varlit .)
    DO              reduce using rule 41 (arithm_operation -> varlit .)


state 41

    (51) until -> UNTIL . comparison DO stmt_list
    (48) comparison -> . arithm_operation N_EQ arithm_operation
    (49) comparison -> . arithm_operation L_EQ arithm_operation
    (50) comparison -> . arithm_operation GR_EQ arithm_operation
    (34) arithm_operation -> . OPEN_BR arithm_operation CLOSING_BR
    (35) arithm_operation -> . ADD arithm_operation
    (36) arithm_operation -> . SUB arithm_operation
    (37) arithm_operation -> . arithm_operation MUL arithm_operation
    (38) arithm_operation -> . arithm_operation DIV arithm_operation
    (39) arithm_operation -> . arithm_operation ADD arithm_operation
    (40) arithm_operation -> . arithm_operation SUB arithm_operation
    (41) arithm_operation -> . varlit
    (42) arithm_operation -> . function_call
    (43) arithm_operation -> . robot_operation
    (44) varlit -> . VARIABLE
    (45) varlit -> . literal
    (46) varlit -> . matr_elem
    (53) function_call -> . VARIABLE OPEN_BR CLOSING_BR
    (54) function_call -> . VARIABLE OPEN_BR variable_list CLOSING_BR
    (55) robot_operation -> . GO
    (56) robot_operation -> . RL
    (57) robot_operation -> . RR
    (58) robot_operation -> . SONAR
    (59) robot_operation -> . COMPASS
    (28) literal -> . U_NUMBER
    (29) literal -> . S_NUMBER
    (47) matr_elem -> . VARIABLE SQ_OPEN_BR literal literal SQ_CLOSING_BR
